--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "method-override": "^2.1.3",
     "morgan": "^1.2.3",
     "mysql": "^2.4.3",
+    "prettyjson": "^1.0.0",
     "xml2js": "^0.4.4"
   }
 }
