--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "body-parser": "^1.6.5",
     "cas": "0.0.3",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.2",
     "express": "4.8.5",
     "express-session": "^1.7.6",
@@ -13,6 +14,8 @@
     "method-override": "^2.1.3",
     "morgan": "^1.2.3",
     "mysql": "^2.4.3",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
     "prettyjson": "^1.0.0",
     "xml2js": "^0.4.4"
   }
